添加队列执行方法

--- a/example/index.html
+++ b/example/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Demo</title>
 </head>
 <body>
     <h3>start</h3>
@@ -23,15 +23,15 @@
         debounce,
         bootstrapReflect,
         bootstrapProxy
-      } from '../dist/rollup-bundler-template.es.js'
+      } from '/dist/rollup-bundler-template.es.js'
       const login = new LoginPage()
       window.login = login
       window.People = People
       // login.BASE_URL = "https://www.google.com"
       // console.log(login.BASE_URL)
-      // boostrapReflect();
+      // bootstrapReflect();
 
-      bootstrapProxy();
+      // bootstrapProxy();
 
       // window.login = login
       // const rs = await login.toLogin("Mr Ming")
