feat: 添加babel,打包压缩

--- a/example/index.html
+++ b/example/index.html
@@ -23,7 +23,7 @@
         debounce,
         bootstrapReflect,
         bootstrapProxy
-      } from '/dist/rollup-bundler-template.es.js'
+      } from '/dist/index.es.js'
       const login = new LoginPage()
       window.login = login
       window.People = People
